Override summary in project listing

--- a/content/projects/discontinued-remove-temporarily/index.html
+++ b/content/projects/discontinued-remove-temporarily/index.html
@@ -1,4 +1,4 @@
-{"title": "Discontinued: Remove Temporarily", "date": "2012-02-22 12:44:34", "description": "", "categories": [], "slug": "discontinued-remove-temporarily"}
+{"title": "Discontinued: Remove Temporarily", "date": "2012-02-22 12:44:34", "description": "", "categories": [], "slug": "discontinued-remove-temporarily", "summary": "Remove Temporarily was an experiment adding a simple feature to the Inspector tool which was new in Firefox back then. It allowed removing elements selected in the Inspector tool, something that is now built-in feature of the Firefox Developer Tools."}
 
 	<p>Remove Temporarily was an experiment adding a simple feature to the Inspector tool which was new in Firefox back then. It allowed removing elements selected in the Inspector tool, something that is now built-in feature of the Firefox Developer Tools.</p>
 
