--- a/content/projects/easy-passwords/index.html
+++ b/content/projects/easy-passwords/index.html
@@ -1,4 +1,4 @@
-{"title": "PfP: Pain-free Passwords", "date": "2016-04-19 11:32:29", "description": "", "categories": [], "slug": "easy-passwords"}
+{"title": "PfP: Pain-free Passwords", "date": "2016-04-19 11:32:29", "description": "", "categories": [], "slug": "easy-passwords", "summary": "Use a single master password to generate secure unique passwords for all websites&nbsp;&mdash; without losing track of the passwords you cannot change."}
 
 <p><meta http-equiv="refresh" content="0; url=https://pfp.works/"></p>
 
