--- a/content/projects/extension-auto-installer/index.html
+++ b/content/projects/extension-auto-installer/index.html
@@ -1,4 +1,4 @@
-{"title": "Discontinued: Extension Auto-Installer", "date": "2012-01-13 15:33:00", "description": "", "categories": [], "slug": "extension-auto-installer"}
+{"title": "Discontinued: Extension Auto-Installer", "date": "2012-01-13 15:33:00", "description": "", "categories": [], "slug": "extension-auto-installer", "summary": "Extension Auto-Installer is a helper for Firefox/SeaMonkey/Thunderbird extension developers: it allows automatically adding or updating browser extensions, e.g. via command line tools. This makes testing your changes easier."}
 
 	<p><a href="https://addons.mozilla.org/addon/autoinstaller/" class="installLink">Install page</a></p>
 
