Improved handling of images

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -5,7 +5,7 @@ description: ""
 title: Who I am
 ---
 
-<p style="float: left; margin: 5px;">{{< img "me.png" "My \"photo\"" >}}</p>
+{{< img src="me.png" alt="My \"photo\"" class="image-par-left" />}}
 
 	<p>My name is Wladimir Palant and developing software is both my day job and a hobby. I became fascinated by Firefox extension development in 2003, and my <a href="https://addons.mozilla.org/addon/adblock-plus/">Adblock Plus extension</a> became so popular that eventually I co-founded <a href="https://eyeo.com/">Eyeo GmbH</a> to continue its development. By now Adblock Plus isn&#8217;t available just for Firefox but for Chrome, Opera, Safari, Android and Internet Explorer as well. My other notable Firefox extensions are <a href="https://addons.mozilla.org/addon/google-search-link-fix/">Google/Yandex search link fix</a> as well as developer tools <a href="https://addons.mozilla.org/addon/javascript-deobfuscator/">JavaScript Deobfuscator</a> and <a href="https://addons.mozilla.org/addon/autoinstaller/">Extension Auto-Installer</a>.</p>
 
