--- a/content/projects/enforce-encryption/index.html
+++ b/content/projects/enforce-encryption/index.html
@@ -11,7 +11,7 @@ title: Enforce Encryption
 
 <p><a href="https://addons.mozilla.org/addon/enforce-encryption/" class="installLink">Install page</a></p>
 
-	<p><a href="enforceencryption.png">{{< img "enforceencryption.png" "Enforce Encryption screenshot" 200 >}}</a></p>
+	{{< img src="enforceencryption.png" alt="Enforce Encryption screenshot" thumb="1" />}}
 
 	<h4>How to use Enforce Encryption</h4>
 
