Unified presentation in all article listings

--- a/content/projects/easy-passwords/index.html
+++ b/content/projects/easy-passwords/index.html
@@ -8,6 +8,8 @@ summary: Use a single master password to generate secure unique passwords for al
 title: 'PfP: Pain-free Passwords'
 ---
 
-<p><meta http-equiv="refresh" content="0; url=https://pfp.works/"></p>
-
 <p>This project has <a href="https://pfp.works/">its own website</a> now.</p>
+
+<p></p>
+
+<meta http-equiv="refresh" content="0; url=https://pfp.works/">
